@@ -1,0 +1,30 @@
+%Error: t/t_force_select_bad.v:24:5: Force left-hand-side must not have variable bit/part select (IEEE 1800-2023 10.6.2)
+                                   : ... note: In instance 't'
+   24 |     force array1[bad_index] = 1'b1;   
+      |     ^~~~~
+        t/t_force_select_bad.v:24:18: ... Location of non-constant index
+   24 |     force array1[bad_index] = 1'b1;   
+      |                  ^~~~~~~~~
+        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
+%Error: t/t_force_select_bad.v:25:5: Release left-hand-side must not have variable bit/part select (IEEE 1800-2023 10.6.2)
+                                   : ... note: In instance 't'
+   25 |     release array1[bad_index];   
+      |     ^~~~~~~
+        t/t_force_select_bad.v:25:20: ... Location of non-constant index
+   25 |     release array1[bad_index];   
+      |                    ^~~~~~~~~
+%Error: t/t_force_select_bad.v:26:5: Force left-hand-side must not have variable bit/part select (IEEE 1800-2023 10.6.2)
+                                   : ... note: In instance 't'
+   26 |     force vec[bad_index+:1] = 1'b1;   
+      |     ^~~~~
+        t/t_force_select_bad.v:26:15: ... Location of non-constant index
+   26 |     force vec[bad_index+:1] = 1'b1;   
+      |               ^~~~~~~~~
+%Error: t/t_force_select_bad.v:27:5: Release left-hand-side must not have variable bit/part select (IEEE 1800-2023 10.6.2)
+                                   : ... note: In instance 't'
+   27 |     release vec[bad_index+:1];   
+      |     ^~~~~~~
+        t/t_force_select_bad.v:27:17: ... Location of non-constant index
+   27 |     release vec[bad_index+:1];   
+      |                 ^~~~~~~~~
+%Error: Exiting due to
